--- a/{{project}}.Server/packages.config
+++ b/{{project}}.Server/packages.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.5" targetFramework="net452" />
-  <package id="CitizenFX.Server" version="1.0.0.1065" targetFramework="net452" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
-  <package id="Google.Protobuf" version="3.8.0" targetFramework="net452" />
+  <package id="CitizenFX.Core.Server" version="1.0.1636" targetFramework="net452" />
+  <package id="EntityFramework" version="6.3.0" targetFramework="net452" />
+  <package id="Google.Protobuf" version="3.10.0" targetFramework="net452" />
   <package id="JetBrains.Annotations" version="2019.1.3" targetFramework="net452" />
-  <package id="MySql.Data" version="8.0.17" targetFramework="net452" />
-  <package id="MySql.Data.EntityFramework" version="8.0.17" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.18" targetFramework="net452" />
+  <package id="MySql.Data.EntityFramework" version="8.0.18" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
-  <package id="NFive.SDK.Core" version="0.1.0.43" allowedVersions="[0.1.0.43,0.2)" targetFramework="net452" />
-  <package id="NFive.SDK.Server" version="0.1.0.51" allowedVersions="[0.1.0.51,0.2)" targetFramework="net452" />
+  <package id="NFive.SDK.Core" version="0.1.0.50" allowedVersions="[0.1.0.50,0.2)" targetFramework="net452" />
+  <package id="NFive.SDK.Server" version="0.1.0.70" allowedVersions="[0.1.0.70,0.2)" targetFramework="net452" />
+  <package id="NGettext" version="0.6.4" targetFramework="net452" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
-  <package id="Z.EntityFramework.Plus.EF6" version="1.10.1" targetFramework="net452" />
+  <package id="Z.EntityFramework.Plus.EF6" version="1.10.3" targetFramework="net452" />
 </packages>
